  * 2010/12/20 (Version 1.4.0)
    added:
     - italian translation
    bugfix:
     - py2exe and PIL workaround
  
  * 2010/11/12 (Version 1.3.99 BETA)
    changed:
     - internal optimizations
    bugfix:
     - a few
  
  * 2010/10/31 (Version 1.3.98 ALPHA)
    changed:
     - better audio support
     - simplified render settings
     - UI optimizations
     - keyboard shortcuts
     - settings file saved in app dir (if possible) - portable version
    bugfix:
     - working CLI
     - order of recently used projects fixed
  
  * 2010/07/18 (Version 1.3.97 ALPHA)
    added:
     - MJPEG-Renderer
     - Direct input for motion positions
     - Copy and paste for motion positions (keyboard only)
    bugfix:
     - minimal size of mainframe specified
     - property dialog could not open if no pics were added to the project
     - ticket id 2890912: drop position determined correctly

  * 2010/07/04 (Version 1.3.96 ALPHA)
    added:
     - Flash-Video Renderer
     - additional transition (roll)  
    bugfix:
     - fixed frame count due float precision
     - removing audio file in project properties works
     - Workaround: audio/video sync (mencoder calculates strange movie length in NTSC)
     - progress bar has correct max progress
     - RemoveObserver raises ValueError: list.remove(x): x not in list
     - OutputProfile raises AttributeError no attribute OutputProfile.__resNtsc

  * 2010/06/12 (Version 1.3.95 ALPHA)
    added:
     - Transition type and duration customizable
     - Option for draft-mode (replaces UseResample option)
     - sample music files (thanks to my dad)
     - Portuguese translation started
     - Req-ID 3006759 (4:3 Support)
     - Req-ID 3002271 (Option for no transition)
    changed:
     - Handling of Aspect-Ratio data (internal)
     - menu entry to change language
     - aspect ratio for SVCD and DVD considered
     - user interface simplified
     - multi project capable